[package]
name = "tailwindcss-native-rust-macro"
version = "0.1.0"
edition = "2021"
description = "Generate tailwind output as a literal string at compile time."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/tailwindcss-native-rust-macro"
authors = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
keywords = ["macros", "tailwind", "tailwindcss"]
repository = "https://github.com/llblumire/tailwindcss-native-rust-macro"
rust-version = "1.77.2"
categories = ["web-programming", "development-tools:build-utils"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = "2.0.60"
